manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://worklin-frontend.vercel.app"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "worklin-chat-service"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: www.worklin.shop
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: worklin-auth-service
                port:
                  number: 3001
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: worklin-chat-service
                port:
                  number: 3004
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: worklin-chat-service
                port:
                  number: 3004
          - path: /job
            pathType: Prefix
            backend:
              service:
                name: worklin-job-service
                port:
                  number: 3003
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: worklin-notification-service
                port:
                  number: 3006
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: worklin-payment-service
                port:
                  number: 3005
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: worklin-user-service
                port:
                  number: 3002
